Add classinfo to nsGenericHTMLCollection, fixing bug 85560 and bug 83107.  r=peterv, sr=jst, a=dbaron